[tool.poetry]
name = "koodu"
version = "0.0.3"
description = "Simple and lightweight code generator engine written in python"
authors = ["Alex Mboutchouang <mboutchouangalex@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "koodu"}]
homepage = "https://gmwa.github.io/koodu/"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development"
]

[tool.poetry.scripts]
koodu = "koodu.scripts.main:main"
koodu-gen = "koodu.scripts.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"
pydantic = "^1.10.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "1.4.0"
ruff = "^0.0.272"
mkdocs = "^1.4.3"
mkdocs-material = "^9.4.2"
mkdocs-material-extensions = "^1.2"
pytest = "^7.4.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
extend-exclude = [
    "examples/"
]
