
[metadata]
name = koodu
description = Miscellaneous utilities for ranking models
author = Alex Mboutchouang
license = MIT
version = attr: koodu.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GMWA/code-generator-engine
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    setuptools
    PyYAML >= 6.0
    Jinja2 >= 3.1.2

[options.entry_points]
console_scripts = 
    koodu = koodu.scripts.generate:main
    koodu-checks = koodu.scripts.checks:main


[options.packages.find]
where = .