
[metadata]
name = Koodu
description = Miscellaneous utilities for ranking models
author = Alex Mboutchouang
author_email = mboutchouangalex@gmail.com
maintainer = Alex Mboutchouang
license = MIT
version = attr: koodu.__version__
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = 
    Source Code = https://github.com/GMWA/code-generator-engine/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries

[options]
package_dir = = src
packages = find:
include_package_data = True
python_requires = >=3.7

install_requires =
    setuptools
    PyYAML >= 6.0
    Jinja2 >= 3.1.2

[options.entry_points]
console_scripts = 
    koodu = koodu.scripts.main:main
    koodu-gen = koodu.scripts.main:main

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings = 
    error

[coverrage:run]
branch = True
source =
    koodu
    tests

[coverrage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# ISC = implicit str concat
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ exports names
    src/koodu/__init__.py: F401