
[metadata]
name = Koodu
description = Miscellaneous utilities for ranking models
author = Alex Mboutchouang
author_email = mboutchouangalex@gmail.com
maintainer = Alex Mboutchouang
license = MIT
version = attr: koodu.__version__
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = 
    Source Code = https://github.com/GMWA/koodu/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries

[options]
package_dir = = src
packages = find:
include_package_data = True
python_requires = >=3.7

install_requires =
    setuptools
    PyYAML >= 6.0
    Jinja2 >= 3.1.2

[options.entry_points]
console_scripts = 
    koodu = koodu.scripts.main:main
    koodu-gen = koodu.scripts.main:main

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings = 
    error

[coverrage:run]
branch = True
source =
    koodu
    tests

[coverrage:paths]
source =
    src
    */site-packages

[flake8]
ignore =
    D203,
    E402,
    E722,
    W191,
    C901,
    F401
exclude = 
    .git,
    __pycache__,
    venv,
    build
    output

max-complexity = 10
max-line-length = 100